--- a/apps/connection/lib/application.html.eex
+++ b/apps/connection/lib/application.html.eex
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/protobufjs@7.4.0/dist/protobuf.min.js"></script>
     <script type="application/javascript" defer="defer" src="js/application.js"></script>
     <title>
       Websocket Chat
