--- a/apps/connection/lib/application.html.eex
+++ b/apps/connection/lib/application.html.eex
@@ -9,6 +9,17 @@
     </title>
   </head>
   <body>
+   <div id="login-form">
+      <form>
+        <label for="uid">User ID:</label>
+        <input id="uid" type="text" name="uid">
+        <br><br>
+        <label for="password">Password:</label>
+        <input id="password" type="text" name="password">
+        <br><br>
+        <input type="submit" value="Login" id="login-button">
+      </form>
+    </div>
     <main id="main"></main>
     <br>
     <form>
