--- a/apps/exchat_web/lib/exchat_web/controllers/chat_html/chat.html.heex
+++ b/apps/exchat_web/lib/exchat_web/controllers/chat_html/chat.html.heex
@@ -2,31 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://cdn.jsdelivr.net/npm/protobufjs@7.4.0/dist/protobuf.min.js"></script>
-    <script type="application/javascript" defer="defer" src="assets/js/application.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/protobufjs@7.4.0/dist/protobuf.min.js">
+    </script>
+    <script type="application/javascript" defer="defer" src="assets/js/application.js">
+    </script>
     <title>
       Websocket Chat
     </title>
   </head>
   <body>
-   <div id="login-form">
+    <div id="login-form">
       <form>
         <label for="uid">User ID:</label>
-        <input id="uid" type="text" name="uid">
-        <br><br>
+        <input id="uid" type="text" name="uid" />
+        <br /><br />
         <label for="password">Password:</label>
-        <input id="password" type="text" name="password">
-        <br><br>
-        <input type="submit" value="Login" id="login-button">
+        <input id="password" type="text" name="password" />
+        <br /><br />
+        <input type="submit" value="Login" id="login-button" />
       </form>
     </div>
     <main id="main"></main>
-    <br>
+    <br />
     <form>
-      <input id="message" type="text">
-      <br>
-      <br>
-      <input type="submit" value="send" id="button">
+      <input id="message" type="text" />
+      <br />
+      <br />
+      <input type="submit" value="send" id="button" />
     </form>
   </body>
 </html>
